--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,27 @@
-user: 'userid'
-item: 'itemid'
-rating: 'ratings'
+#Hotel
+user: 'id'
+item: 'hotelid'
+rating: 'starrating'
 
 
 # input indexes
-user_index: 1
-item_index: 2
-rating_index: 3
+user_index: 0
+item_index: 1
+rating_index: 8
+
+
+# data table viz
+col_1: 'id'
+col_2: 'hotelid'
+col_3: 'hotelname'
+col_4: 'address'
+col_5: 'city'
+col_6: 'country'
+col_7: 'zipcode'
+col_8: 'propertytype'
+col_9: 'starrating'
+col_10: 'latitude'
+col_11: 'longitude'
+col_12: 'Source'
+
+source: 'gs://kfconfig/small_hotel.csv'
